Set honeypot to tabIndex -1 and autocomplete off.  Add option for creating new, random element.

--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -18,10 +18,12 @@
 	<message key="plugins.generic.formHoneypot.leaveBlank">Leave this blank</message>
 	<message key="plugins.generic.formHoneypot.doNotUseThisField">This field must be left blank: {$element}</message>
 	<message key="plugins.generic.formHoneypot.invalidSessionTime">Your registration has been blocked.</message>
+	<message key="plugins.generic.formHoneypot.invalidSessionTime">Your registration has been blocked.</message>
 	<!-- Form Honeypot Settings Management -->
 	<message key="plugins.generic.formHoneypot.manager.formHoneypotSettings">Form Honeypot Settings</message>
 	<message key="plugins.generic.formHoneypot.manager.settings.description"><![CDATA[Select the field on the registration form which you would like to convert into a bot honeypot.  This field will be hidden from normal users via javascript, but bots are likely to still see and to try to use the field.  Using this field will result in a registration error.  The field will still be available to users from the user profile form after registration.]]></message>
 	<message key="plugins.generic.formHoneypot.manager.settings.element">Form Element</message>
+	<message key="plugins.generic.formHoneypot.manager.settings.createNewElement">Create a new element</message>
 	<message key="plugins.generic.formHoneypot.manager.settings.minimumTime">Minimum time (in seconds)</message>
 	<message key="plugins.generic.formHoneypot.manager.settings.minimumTimeNumber">Minimum time must be a positive numeric value.</message>
 	<message key="plugins.generic.formHoneypot.manager.settings.maximumTime">Maximum time (in seconds)</message>
